test/libsolidity/syntaxTests/constants/constant_override.sol
uint constant override x;
// ----
// TypeError 4266: (0-24): Uninitialized "constant" variable.
